Updated font-styling and fixed issue with overflows

--- a/src/components/Content/default.scss
+++ b/src/components/Content/default.scss
@@ -7,14 +7,18 @@
 
 .container {
   max-width: 80%;
+  width: 80%;
   overflow-x: hidden;
+  margin: 0 auto;
 }
 .content-main {
   padding: 80px 0;
+  width: 100%;
 }
 .content-aside {
   padding-top: 90px;
   padding-bottom: 100px;
+  width: 100%;
 }
 .content-heading {
   font-size: 1.8rem;
@@ -22,18 +26,18 @@
   padding-bottom: 10px;
 }
 
-.content {
-  font-size: 1.2rem;
-  letter-spacing: 0.5px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  line-height: 1.1;
-  color: #333;
+.display-3 {
+  font-size: 3rem;
 }
-.quote {
-  font-style: italic;
-  font-weight: 400;
-  color: #333;
+
+.display-4 {
+  font-size: 2.5rem;
+  white-space: normal;
+}
+
+.md-caption {
+  font-size: 1.1rem;
+  color: #555;
 }
 .img-small {
   display: block;
