--- a/src/components/Services/Services.scss
+++ b/src/components/Services/Services.scss
@@ -6,6 +6,7 @@
 }
 
 #services {
+  width: 100%;
   a {
     text-decoration: none;
   }
